refactor boundary import

--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install geoalchemy2"
+    "# %pip install jupyter-black"
    ]
   },
   {
@@ -35,13 +35,15 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "import sqlalchemy as sq\n",
+    "import black\n",
+    "import jupyter_black as bl\n",
     "from matplotlib import pyplot as plt\n",
     "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "0343b664",
    "metadata": {},
    "outputs": [],
@@ -54,44 +56,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "f60d3f06",
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv()\n",
+    "os.chdir(\"../../src\")\n",
+    "bl.load()\n",
+    "load_dotenv(\"docker/.env\")\n",
     "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
     "PG_PW = os.getenv(\"POSTGRES_PW\")\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
     "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
-    "PG_PORT = os.getenv(\"POSTGRES_PORT\")"
+    "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
+    "\n",
+    "if PG_PORT is None:\n",
+    "    sys.exit(\"Error: Could not find the port for the database.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "234bc8fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "regions = \"/data/WeatherStation/Data/2006CensusAgRegions/gcar000b07a_e.shp\"\n",
+    "regions = \"WeatherStation/data/2006CensusAgRegions/gcar000b07a_e.shp\"\n",
     "gdfRegions = gpd.read_file(regions, encoding=\"utf-8\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "2e61d25e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stations = \"/data/WeatherStation/Data/climate_station_list.csv\"\n",
+    "stations = \"WeatherStation/data/climate_station_list.csv\"\n",
     "dfStations = pd.read_csv(stations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "38863e75",
    "metadata": {},
    "outputs": [],
@@ -104,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "d64449ea",
    "metadata": {},
    "outputs": [],
@@ -173,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "729e8851",
    "metadata": {},
    "outputs": [],
@@ -187,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "753ff94d",
    "metadata": {},
    "outputs": [],
@@ -238,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "718b0a12",
    "metadata": {},
    "outputs": [],
@@ -259,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "d42c1e9e",
    "metadata": {},
    "outputs": [],
@@ -270,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "6c500e04",
    "metadata": {},
    "outputs": [],
@@ -280,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "4c7de4c9",
    "metadata": {},
    "outputs": [],
@@ -303,195 +310,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "7153cc45",
+   "execution_count": null,
+   "id": "c2f8e707",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set first row color red in rgba\n",
-    "gdfProjected.at[0, \"color\"] = colors[0]\n",
-    "\n",
-    "# set second row color\n",
-    "gdfProjected.at[1, \"color\"] = colors[0]\n",
-    "\n",
-    "# set third row color\n",
-    "gdfProjected.at[2, \"color\"] = colors[0]\n",
-    "gdfProjected.at[7, \"color\"] = colors[0]\n",
-    "\n",
-    "gdfProjected.at[0, \"CRnum\"] = 3\n",
-    "gdfProjected.at[1, \"CRnum\"] = 3\n",
-    "gdfProjected.at[2, \"CRnum\"] = 3\n",
-    "gdfProjected.at[7, \"CRnum\"] = 3"
+    "gdfProjected[\"CARuid\"] = gdfProjected[\"CARuid\"].astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "f65263be",
+   "execution_count": null,
+   "id": "47c53076",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdfProjected.at[3, \"color\"] = colors[1]\n",
-    "gdfProjected.at[4, \"color\"] = colors[1]\n",
-    "gdfProjected.at[5, \"color\"] = colors[1]\n",
+    "gdfProjected.loc[\n",
+    "    gdfProjected[\"CARuid\"].isin([4612, 4601, 4602, 4603, 4608]), \"CRnum\"\n",
+    "] = 3\n",
+    "gdfProjected.loc[gdfProjected[\"CARuid\"].isin([4604, 4605, 4606]), \"CRnum\"] = 2\n",
+    "gdfProjected.loc[gdfProjected[\"CARuid\"].isin([4607, 4609, 4610, 4611]), \"CRnum\"] = 1\n",
     "\n",
-    "gdfProjected.at[3, \"CRnum\"] = 2\n",
-    "gdfProjected.at[4, \"CRnum\"] = 2\n",
-    "gdfProjected.at[5, \"CRnum\"] = 2"
+    "gdfProjected.loc[gdfProjected[\"CRnum\"] == 3, \"color\"] = colors[0]\n",
+    "gdfProjected.loc[gdfProjected[\"CRnum\"] == 2, \"color\"] = colors[1]\n",
+    "gdfProjected.loc[gdfProjected[\"CRnum\"] == 1, \"color\"] = colors[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "f1eae96e",
+   "execution_count": null,
+   "id": "b137aa31",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdfProjected.at[6, \"color\"] = colors[2]\n",
-    "gdfProjected.at[8, \"color\"] = colors[2]\n",
-    "gdfProjected.at[9, \"color\"] = colors[2]\n",
-    "gdfProjected.at[10, \"color\"] = colors[2]\n",
+    "gdfProjected.loc[gdfProjected[\"CARuid\"].isin([4810, 4820, 4830]), \"CRnum\"] = 8\n",
+    "gdfProjected.loc[gdfProjected[\"CARuid\"].isin([4840, 4841, 4850]), \"CRnum\"] = 9\n",
+    "gdfProjected.loc[gdfProjected[\"CARuid\"].isin([4860, 4870]), \"CRnum\"] = 10\n",
     "\n",
-    "gdfProjected.at[6, \"CRnum\"] = 1\n",
-    "gdfProjected.at[8, \"CRnum\"] = 1\n",
-    "gdfProjected.at[9, \"CRnum\"] = 1\n",
-    "gdfProjected.at[10, \"CRnum\"] = 1"
+    "gdfProjected.loc[gdfProjected[\"CRnum\"] == 8, \"color\"] = colors[3]\n",
+    "gdfProjected.loc[gdfProjected[\"CRnum\"] == 9, \"color\"] = colors[4]\n",
+    "gdfProjected.loc[gdfProjected[\"CRnum\"] == 10, \"color\"] = colors[10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "bbf60952",
+   "execution_count": null,
+   "id": "c3052395",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdfProjected.at[11, \"color\"] = \"#FFFFFF\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "d5e75ff4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdfProjected.at[12, \"color\"] = colors[3]\n",
-    "gdfProjected.at[13, \"color\"] = colors[3]\n",
-    "gdfProjected.at[14, \"color\"] = colors[3]\n",
+    "gdfProjected.loc[\n",
+    "    gdfProjected[\"CARuid\"].isin([4710, 4711, 4720, 4721, 4731]), \"CRnum\"\n",
+    "] = 4\n",
+    "gdfProjected.loc[\n",
+    "    gdfProjected[\"CARuid\"].isin([4730, 4732, 4733, 4740, 4741]), \"CRnum\"\n",
+    "] = 5\n",
+    "gdfProjected.loc[\n",
+    "    gdfProjected[\"CARuid\"].isin([4750, 4751, 4760, 4780, 4781]), \"CRnum\"\n",
+    "] = 6\n",
+    "gdfProjected.loc[\n",
+    "    gdfProjected[\"CARuid\"].isin([4761, 4770, 4771, 4790, 4791]), \"CRnum\"\n",
+    "] = 7\n",
     "\n",
-    "gdfProjected.at[12, \"CRnum\"] = 8\n",
-    "gdfProjected.at[13, \"CRnum\"] = 8\n",
-    "gdfProjected.at[14, \"CRnum\"] = 8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "dd12508f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdfProjected.at[15, \"color\"] = colors[4]\n",
-    "gdfProjected.at[16, \"color\"] = colors[4]\n",
-    "gdfProjected.at[17, \"color\"] = colors[4]\n",
     "\n",
-    "gdfProjected.at[15, \"CRnum\"] = 9\n",
-    "gdfProjected.at[16, \"CRnum\"] = 9\n",
-    "gdfProjected.at[17, \"CRnum\"] = 9"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "d55a4247",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdfProjected.at[18, \"color\"] = colors[10]\n",
-    "gdfProjected.at[19, \"color\"] = colors[10]\n",
-    "\n",
-    "gdfProjected.at[18, \"CRnum\"] = 10\n",
-    "gdfProjected.at[19, \"CRnum\"] = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "id": "1baf2134",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdfProjected.at[20, \"color\"] = colors[5]\n",
-    "gdfProjected.at[21, \"color\"] = colors[5]\n",
-    "gdfProjected.at[22, \"color\"] = colors[5]\n",
-    "gdfProjected.at[23, \"color\"] = colors[5]\n",
-    "gdfProjected.at[25, \"color\"] = colors[5]\n",
-    "\n",
-    "gdfProjected.at[20, \"CRnum\"] = 4\n",
-    "gdfProjected.at[21, \"CRnum\"] = 4\n",
-    "gdfProjected.at[22, \"CRnum\"] = 4\n",
-    "gdfProjected.at[23, \"CRnum\"] = 4\n",
-    "gdfProjected.at[25, \"CRnum\"] = 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "id": "c18a193f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdfProjected.at[24, \"color\"] = colors[7]\n",
-    "gdfProjected.at[26, \"color\"] = colors[7]\n",
-    "gdfProjected.at[27, \"color\"] = colors[7]\n",
-    "gdfProjected.at[28, \"color\"] = colors[7]\n",
-    "gdfProjected.at[29, \"color\"] = colors[7]\n",
-    "\n",
-    "gdfProjected.at[24, \"CRnum\"] = 5\n",
-    "gdfProjected.at[26, \"CRnum\"] = 5\n",
-    "gdfProjected.at[27, \"CRnum\"] = 5\n",
-    "gdfProjected.at[28, \"CRnum\"] = 5\n",
-    "gdfProjected.at[29, \"CRnum\"] = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "id": "8018153f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdfProjected.at[30, \"color\"] = colors[6]\n",
-    "gdfProjected.at[31, \"color\"] = colors[6]\n",
-    "gdfProjected.at[32, \"color\"] = colors[6]\n",
-    "gdfProjected.at[36, \"color\"] = colors[6]\n",
-    "gdfProjected.at[37, \"color\"] = colors[6]\n",
-    "\n",
-    "gdfProjected.at[30, \"CRnum\"] = 6\n",
-    "gdfProjected.at[31, \"CRnum\"] = 6\n",
-    "gdfProjected.at[32, \"CRnum\"] = 6\n",
-    "gdfProjected.at[36, \"CRnum\"] = 6\n",
-    "gdfProjected.at[37, \"CRnum\"] = 6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "id": "3b97b663",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdfProjected.at[33, \"color\"] = colors[8]\n",
-    "gdfProjected.at[34, \"color\"] = colors[8]\n",
-    "gdfProjected.at[35, \"color\"] = colors[8]\n",
-    "gdfProjected.at[38, \"color\"] = colors[8]\n",
-    "gdfProjected.at[39, \"color\"] = colors[8]\n",
-    "\n",
-    "gdfProjected.at[33, \"CRnum\"] = 7\n",
-    "gdfProjected.at[34, \"CRnum\"] = 7\n",
-    "gdfProjected.at[35, \"CRnum\"] = 7\n",
-    "gdfProjected.at[38, \"CRnum\"] = 7\n",
-    "gdfProjected.at[39, \"CRnum\"] = 7"
+    "gdfProjected.loc[gdfProjected[\"CRnum\"] == 4, \"color\"] = colors[5]\n",
+    "gdfProjected.loc[gdfProjected[\"CRnum\"] == 5, \"color\"] = colors[7]\n",
+    "gdfProjected.loc[gdfProjected[\"CRnum\"] == 6, \"color\"] = colors[6]\n",
+    "gdfProjected.loc[gdfProjected[\"CRnum\"] == 7, \"color\"] = colors[8]"
    ]
   },
   {
@@ -510,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "3c829c17",
    "metadata": {},
    "outputs": [],
@@ -608,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "e2360bbe",
    "metadata": {},
    "outputs": [],
@@ -624,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "c685442b",
    "metadata": {},
    "outputs": [],
@@ -752,20 +637,21 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8f7f068d",
    "metadata": {},
+   "outputs": [],
    "source": [
     "### push dataframes to postgres\n",
     "\n",
-    "tblName = 'census_ag_regions'\n",
+    "tblName = \"census_ag_regions\"\n",
     "pushGdfToPostGresDB(tblName, gdfProjected, PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
     "\n",
-    "tblName = 'stations_dly'\n",
+    "tblName = \"stations_dly\"\n",
     "pushGdfToPostGresDB(tblName, gdfStationsDly, PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
     "\n",
-    "tblName = 'stations_hly'\n",
+    "tblName = \"stations_hly\"\n",
     "pushGdfToPostGresDB(tblName, gdfStationsHly, PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)"
    ]
   },
@@ -794,11 +680,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "5b3ded1ccb95c1d9bd405e7b823d9e85424cde40fbb5985eb47e999ef50e15b4"
    }
   }
  },
