fix typecheck issues

--- a/src/SatelliteCopernicus/pullCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullCopernicusData.ipynb
@@ -15,7 +15,7 @@
    "outputs": [],
    "source": [
     "import os, sys, time, cdsapi, random, zipfile, calendar, multiprocessing\n",
-    "from QueryHandler import QueryHandler\n",
+    "from CopernicusQueryBuilder import CopernicusQueryBuilder\n",
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
     "import geopandas as gpd\n",
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from DataService import DataService"
+    "from Shared.DataService import DataService"
    ]
   },
   {
@@ -120,7 +120,7 @@
     "    db = DataService(\n",
     "        PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW\n",
     "    )  # Handles connections to the database\n",
-    "    queryHandler = QueryHandler()\n",
+    "    queryHandler = CopernicusQueryBuilder()\n",
     "    jobArgs = []  # Holds tuples of arguments for pooled workers\n",
     "    count = 1  # An incrementer used to create unique file names\n",
     "\n",
@@ -150,7 +150,7 @@
     "    # Handles the multiple processes\n",
     "    pool = multiprocessing.Pool(NUM_WORKERS)  # Defines the number of workers\n",
     "    pool.starmap(\n",
-    "        pullSateliteData, jobArgs\n",
+    "        pullSatelliteData, jobArgs\n",
     "    )  # Creates the queue of jobs - pullSateliteData is the function and jobArgs holds the arguments\n",
     "    pool.close()  # Once these jobs are finished close the multiple processes pool"
    ]
@@ -350,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pullSateliteData(\n",
+    "def pullSatelliteData(\n",
     "    agRegions: gpd.GeoDataFrame,\n",
     "    delay: int,\n",
     "    year: str,\n",
@@ -432,10 +432,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.6"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "fa12c0197ba262d3978e6f6673cf27e2255540123d2a48a6d08e62ef766e322e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
