--- a/src/importSoil/importSoil.ipynb
+++ b/src/importSoil/importSoil.ipynb
@@ -12,7 +12,7 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from DataService import DataService"
+    "from Shared.DataService import DataService"
    ]
   },
   {
