--- a/src/SatelliteCopernicus/pullSampleCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullSampleCopernicusData.ipynb
@@ -25,7 +25,7 @@
     "import numpy as np\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from DataService import DataService\n",
+    "from Shared.DataService import DataService\n",
     "\n",
     "\n",
     "load_dotenv()\n",
@@ -361,7 +361,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -375,9 +375,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "fa12c0197ba262d3978e6f6673cf27e2255540123d2a48a6d08e62ef766e322e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
