fix ipynb mypy issues

--- a/src/SatelliteCopernicus/pullCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullCopernicusData.ipynb
@@ -14,17 +14,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys, time, cdsapi, random, zipfile, calendar, multiprocessing\n",
+    "import os, sys, time, random, zipfile, calendar, multiprocessing\n",
+    "import cdsapi # type: ignore\n",
     "from CopernicusQueryBuilder import CopernicusQueryBuilder\n",
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
-    "import geopandas as gpd\n",
-    "import xarray as xr\n",
+    "import geopandas as gpd # type: ignore\n",
+    "import xarray as xr # type: ignore\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from Shared.DataService import DataService"
+    "from Shared.DataService import DataService\n"
    ]
   },
   {
@@ -33,12 +34,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "load_dotenv()\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
     "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
     "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
     "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
-    "PG_PW = os.getenv(\"POSTGRES_PW\")\n",
+    "PG_PW = os.getenv(\"POSTGRES_PW\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "NUM_WORKERS = 12  # The number of workers we want to employ (maximum is 16 as per the number of cores)\n",
     "REQ_DELAY = 60  # 1 minute - the base delay required to bypass pulling limits\n",
@@ -107,7 +117,7 @@
     "    \"23:00\",\n",
     "]\n",
     "\n",
-    "AREA = [61, -125, 48, -88]"
+    "AREA = [61, -125, 48, -88]\n"
    ]
   },
   {
@@ -116,9 +126,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def main():\n",
+    "    \n",
+    "    if (\n",
+    "        PG_DB is None\n",
+    "        or PG_ADDR is None\n",
+    "        or PG_PORT is None\n",
+    "        or PG_USER is None\n",
+    "        or PG_PW is None\n",
+    "    ):\n",
+    "        raise ValueError(\"Environment variables not set\")\n",
+    "    \n",
     "    db = DataService(\n",
-    "        PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW\n",
+    "        PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW\n",
     "    )  # Handles connections to the database\n",
     "    queryHandler = CopernicusQueryBuilder()\n",
     "    jobArgs = []  # Holds tuples of arguments for pooled workers\n",
@@ -358,7 +379,16 @@
     "    days: list,\n",
     "    outputFile: str,\n",
     "):\n",
-    "    db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "    if (\n",
+    "        PG_DB is None\n",
+    "        or PG_ADDR is None\n",
+    "        or PG_PORT is None\n",
+    "        or PG_USER is None\n",
+    "        or PG_PW is None\n",
+    "    ):\n",
+    "        raise ValueError(\"Environment variables not set\")\n",
+    "    \n",
+    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "    time.sleep(delay)\n",
     "\n",
     "    print(f\"Starting to pull data for {year}/{month}\")\n",
