--- a/src/SatelliteCopernicus/pullSampleCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullSampleCopernicusData.ipynb
@@ -16,11 +16,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys, time, cdsapi, random, zipfile, calendar\n",
+    "import os, sys, time, random, zipfile, calendar\n",
+    "import cdsapi # type: ignore\n",
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
-    "import geopandas as gpd\n",
-    "import xarray as xr\n",
+    "import geopandas as gpd # type: ignore\n",
+    "import xarray as xr # type: ignore\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -95,8 +96,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "if (\n",
+    "    PG_DB is None\n",
+    "    or PG_ADDR is None\n",
+    "    or PG_PORT is None\n",
+    "    or PG_USER is None\n",
+    "    or PG_PW is None\n",
+    "):\n",
+    "    raise ValueError(\"Environment variables not set\")\n",
+    "\n",
     "db = DataService(\n",
-    "    PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW\n",
+    "    PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW\n",
     ")  # Handles connections to the database\n",
     "conn = db.connect()  # Connect to the database\n",
     "\n",
@@ -146,7 +157,16 @@
     "days = jobArgs[0][4]\n",
     "outputFile = jobArgs[0][5]\n",
     "\n",
-    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "if (\n",
+    "    PG_DB is None\n",
+    "    or PG_ADDR is None\n",
+    "    or PG_PORT is None\n",
+    "    or PG_USER is None\n",
+    "    or PG_PW is None\n",
+    "):\n",
+    "    raise ValueError(\"Environment variables not set\")\n",
+    "\n",
+    "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "time.sleep(delay)\n",
     "\n",
     "print(f\"Starting to pull data for {year}/{month}\")\n",
