--- a/src/SatelliteCopernicus/pullCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullCopernicusData.ipynb
@@ -15,17 +15,17 @@
    "outputs": [],
    "source": [
     "import os, sys, time, random, zipfile, calendar, multiprocessing\n",
-    "import cdsapi # type: ignore\n",
+    "import cdsapi  # type: ignore\n",
     "from CopernicusQueryBuilder import CopernicusQueryBuilder\n",
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
-    "import geopandas as gpd # type: ignore\n",
-    "import xarray as xr # type: ignore\n",
+    "import geopandas as gpd  # type: ignore\n",
+    "import xarray as xr  # type: ignore\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from Shared.DataService import DataService\n"
+    "from Shared.DataService import DataService"
    ]
   },
   {
@@ -34,13 +34,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "load_dotenv()\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
     "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
     "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
     "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
-    "PG_PW = os.getenv(\"POSTGRES_PW\")\n"
+    "PG_PW = os.getenv(\"POSTGRES_PW\")"
    ]
   },
   {
@@ -49,7 +48,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "NUM_WORKERS = 12  # The number of workers we want to employ (maximum is 16 as per the number of cores)\n",
     "REQ_DELAY = 60  # 1 minute - the base delay required to bypass pulling limits\n",
     "MIN_DELAY = 60  # 1 minute - once added to the required delay, creates a minimum delay of 5 minutes to bypass pulling limits\n",
@@ -117,7 +115,7 @@
     "    \"23:00\",\n",
     "]\n",
     "\n",
-    "AREA = [61, -125, 48, -88]\n"
+    "AREA = [61, -125, 48, -88]"
    ]
   },
   {
@@ -126,9 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def main():\n",
-    "    \n",
     "    if (\n",
     "        PG_DB is None\n",
     "        or PG_ADDR is None\n",
@@ -137,7 +133,7 @@
     "        or PG_PW is None\n",
     "    ):\n",
     "        raise ValueError(\"Environment variables not set\")\n",
-    "    \n",
+    "\n",
     "    db = DataService(\n",
     "        PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW\n",
     "    )  # Handles connections to the database\n",
@@ -387,7 +383,7 @@
     "        or PG_PW is None\n",
     "    ):\n",
     "        raise ValueError(\"Environment variables not set\")\n",
-    "    \n",
+    "\n",
     "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "    time.sleep(delay)\n",
     "\n",
