--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -50,13 +50,13 @@
     "import os\n",
     "import sys\n",
     "import pandas as pd\n",
-    "import geopandas as gpd # type: ignore\n",
+    "import geopandas as gpd  # type: ignore\n",
     "import sqlalchemy as sq\n",
     "import black\n",
-    "import jupyter_black as bl # type: ignore\n",
-    "from matplotlib import pyplot as plt # type: ignore\n",
+    "import jupyter_black as bl  # type: ignore\n",
+    "from matplotlib import pyplot as plt  # type: ignore\n",
     "from dotenv import load_dotenv\n",
-    "from Shared.DataService import DataService\n"
+    "from Shared.DataService import DataService"
    ]
   },
   {
@@ -1447,14 +1447,7 @@
     "    user: str,\n",
     "    pw: str,\n",
     ") -> None:\n",
-    "    \n",
-    "    if (\n",
-    "        db is None\n",
-    "        or addr is None\n",
-    "        or port is None\n",
-    "        or user is None\n",
-    "        or pw is None\n",
-    "    ):\n",
+    "    if db is None or addr is None or port is None or user is None or pw is None:\n",
     "        raise ValueError(\"Environment variables not set\")\n",
     "\n",
     "    db_service = DataService(db, addr, port, user, pw)\n",
@@ -1565,15 +1558,19 @@
     "    or PG_PW is None\n",
     "):\n",
     "    raise ValueError(\"Environment variables not set\")\n",
-    "    \n",
+    "\n",
     "tblName = \"census_ag_regions\"\n",
     "pushGdfToPostGresDB(tblName, gdfProjected, PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "\n",
     "tblName = \"stations_dly\"\n",
-    "pushGdfToPostGresDB(tblName, gdfStationsDly, PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
+    "pushGdfToPostGresDB(\n",
+    "    tblName, gdfStationsDly, PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW\n",
+    ")\n",
     "\n",
     "tblName = \"stations_hly\"\n",
-    "pushGdfToPostGresDB(tblName, gdfStationsHly, PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)"
+    "pushGdfToPostGresDB(\n",
+    "    tblName, gdfStationsHly, PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW\n",
+    ")"
    ]
   },
   {
