fixed all mypy issues

--- a/src/SatelliteCopernicus/pullSampleCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullSampleCopernicusData.ipynb
@@ -26,7 +26,7 @@
     "import numpy as np\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from Shared.DataService import DataService\n",
+    "from Shared.DataService import DataService  # type: ignore\n",
     "\n",
     "\n",
     "load_dotenv()\n",
