--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -56,7 +56,7 @@
     "import jupyter_black as bl  # type: ignore\n",
     "from matplotlib import pyplot as plt  # type: ignore\n",
     "from dotenv import load_dotenv\n",
-    "from Shared.DataService import DataService"
+    "from Shared.DataService import DataService # type: ignore"
    ]
   },
   {
@@ -1584,7 +1584,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1602,7 +1602,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "fa12c0197ba262d3978e6f6673cf27e2255540123d2a48a6d08e62ef766e322e"
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
    }
   }
  },
