--- a/src/SatelliteCopernicus/pullSampleCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullSampleCopernicusData.ipynb
@@ -326,8 +326,8 @@
     "df = gpd.GeoDataFrame(\n",
     "    df, crs=\"EPSG:4326\", geometry=gpd.points_from_xy(df.lon, df.lat)\n",
     ")  # Creates geometry from df using lon and lat as cords to create points (points being geometry)\n",
-    "df = df.to_crs(\n",
-    "    crs=\"EPSG:3347\"\n",
+    "df = df.to_crs(  # type: ignore\n",
+    "    crs=\"EPSG:3347\", inplace=True\n",
     ")  # Changes the points projection to match the agriculture regions of EPSG:3347\n",
     "df = gpd.sjoin(\n",
     "    df, agRegions, how=\"inner\", predicate=\"within\"\n",
