refactor duplicate class names (#58)
required mypy changes

--- a/src/SatelliteCopernicus/pullCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullCopernicusData.ipynb
@@ -14,17 +14,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys, time, cdsapi, random, zipfile, calendar, multiprocessing\n",
-    "from QueryHandler import QueryHandler\n",
+    "import os, sys, time, random, zipfile, calendar, multiprocessing\n",
+    "import cdsapi  # type: ignore\n",
+    "from CopernicusQueryBuilder import CopernicusQueryBuilder\n",
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
-    "import geopandas as gpd\n",
-    "import xarray as xr\n",
+    "import geopandas as gpd  # type: ignore\n",
+    "import xarray as xr  # type: ignore\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from DataService import DataService"
+    "from Shared.DataService import DataService  # type: ignore"
    ]
   },
   {
@@ -38,8 +39,15 @@
     "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
     "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
     "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
-    "PG_PW = os.getenv(\"POSTGRES_PW\")\n",
-    "\n",
+    "PG_PW = os.getenv(\"POSTGRES_PW\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "NUM_WORKERS = 12  # The number of workers we want to employ (maximum is 16 as per the number of cores)\n",
     "REQ_DELAY = 60  # 1 minute - the base delay required to bypass pulling limits\n",
     "MIN_DELAY = 60  # 1 minute - once added to the required delay, creates a minimum delay of 5 minutes to bypass pulling limits\n",
@@ -117,10 +125,19 @@
    "outputs": [],
    "source": [
     "def main():\n",
+    "    if (\n",
+    "        PG_DB is None\n",
+    "        or PG_ADDR is None\n",
+    "        or PG_PORT is None\n",
+    "        or PG_USER is None\n",
+    "        or PG_PW is None\n",
+    "    ):\n",
+    "        raise ValueError(\"Environment variables not set\")\n",
+    "\n",
     "    db = DataService(\n",
-    "        PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW\n",
+    "        PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW\n",
     "    )  # Handles connections to the database\n",
-    "    queryHandler = QueryHandler()\n",
+    "    queryHandler = CopernicusQueryBuilder()\n",
     "    jobArgs = []  # Holds tuples of arguments for pooled workers\n",
     "    count = 1  # An incrementer used to create unique file names\n",
     "\n",
@@ -150,7 +167,7 @@
     "    # Handles the multiple processes\n",
     "    pool = multiprocessing.Pool(NUM_WORKERS)  # Defines the number of workers\n",
     "    pool.starmap(\n",
-    "        pullSateliteData, jobArgs\n",
+    "        pullSatelliteData, jobArgs\n",
     "    )  # Creates the queue of jobs - pullSateliteData is the function and jobArgs holds the arguments\n",
     "    pool.close()  # Once these jobs are finished close the multiple processes pool"
    ]
@@ -205,8 +222,8 @@
     "    df = gpd.GeoDataFrame(\n",
     "        df, crs=\"EPSG:4326\", geometry=gpd.points_from_xy(df.lon, df.lat)\n",
     "    )  # Creates geometry from df using lon and lat as cords to create points (points being geometry)\n",
-    "    df = df.to_crs(\n",
-    "        crs=\"EPSG:3347\"\n",
+    "    df.to_crs(  # type: ignore\n",
+    "        crs=\"EPSG:3347\", inplace=True\n",
     "    )  # Changes the points projection to match the agriculture regions of EPSG:3347\n",
     "    df = gpd.sjoin(\n",
     "        df, agRegions, how=\"left\", predicate=\"within\"\n",
@@ -350,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pullSateliteData(\n",
+    "def pullSatelliteData(\n",
     "    agRegions: gpd.GeoDataFrame,\n",
     "    delay: int,\n",
     "    year: str,\n",
@@ -358,7 +375,16 @@
     "    days: list,\n",
     "    outputFile: str,\n",
     "):\n",
-    "    db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "    if (\n",
+    "        PG_DB is None\n",
+    "        or PG_ADDR is None\n",
+    "        or PG_PORT is None\n",
+    "        or PG_USER is None\n",
+    "        or PG_PW is None\n",
+    "    ):\n",
+    "        raise ValueError(\"Environment variables not set\")\n",
+    "\n",
+    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "    time.sleep(delay)\n",
     "\n",
     "    print(f\"Starting to pull data for {year}/{month}\")\n",
@@ -432,10 +458,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.6"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "fa12c0197ba262d3978e6f6673cf27e2255540123d2a48a6d08e62ef766e322e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
