--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -50,12 +50,13 @@
     "import os\n",
     "import sys\n",
     "import pandas as pd\n",
-    "import geopandas as gpd\n",
+    "import geopandas as gpd  # type: ignore\n",
     "import sqlalchemy as sq\n",
     "import black\n",
-    "import jupyter_black as bl\n",
-    "from matplotlib import pyplot as plt\n",
-    "from dotenv import load_dotenv"
+    "import jupyter_black as bl  # type: ignore\n",
+    "from matplotlib import pyplot as plt  # type: ignore\n",
+    "from dotenv import load_dotenv\n",
+    "from Shared.DataService import DataService  # type: ignore"
    ]
   },
   {
@@ -1446,10 +1447,8 @@
     "    user: str,\n",
     "    pw: str,\n",
     ") -> None:\n",
-    "    import geopandas as gpd\n",
-    "\n",
-    "    sys.path.append(\"../\")\n",
-    "    from DataService import DataService\n",
+    "    if db is None or addr is None or port is None or user is None or pw is None:\n",
+    "        raise ValueError(\"Environment variables not set\")\n",
     "\n",
     "    db_service = DataService(db, addr, port, user, pw)\n",
     "    db_con = db_service.connect()\n",
@@ -1551,14 +1550,27 @@
    "source": [
     "### push dataframes to postgres\n",
     "\n",
+    "if (\n",
+    "    PG_DB is None\n",
+    "    or PG_ADDR is None\n",
+    "    or PG_PORT is None\n",
+    "    or PG_USER is None\n",
+    "    or PG_PW is None\n",
+    "):\n",
+    "    raise ValueError(\"Environment variables not set\")\n",
+    "\n",
     "tblName = \"census_ag_regions\"\n",
-    "pushGdfToPostGresDB(tblName, gdfProjected, PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "pushGdfToPostGresDB(tblName, gdfProjected, PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "\n",
     "tblName = \"stations_dly\"\n",
-    "pushGdfToPostGresDB(tblName, gdfStationsDly, PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "pushGdfToPostGresDB(\n",
+    "    tblName, gdfStationsDly, PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW\n",
+    ")\n",
     "\n",
     "tblName = \"stations_hly\"\n",
-    "pushGdfToPostGresDB(tblName, gdfStationsHly, PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)"
+    "pushGdfToPostGresDB(\n",
+    "    tblName, gdfStationsHly, PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW\n",
+    ")"
    ]
   },
   {
@@ -1572,7 +1584,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1586,11 +1598,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5b3ded1ccb95c1d9bd405e7b823d9e85424cde40fbb5985eb47e999ef50e15b4"
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
    }
   }
  },
