--- a/src/SatelliteCopernicus/pullSampleCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullSampleCopernicusData.ipynb
@@ -16,16 +16,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys, time, cdsapi, random, zipfile, calendar\n",
+    "import os, sys, time, random, zipfile, calendar\n",
+    "import cdsapi  # type: ignore\n",
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
-    "import geopandas as gpd\n",
-    "import xarray as xr\n",
+    "import geopandas as gpd  # type: ignore\n",
+    "import xarray as xr  # type: ignore\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from DataService import DataService\n",
+    "from Shared.DataService import DataService  # type: ignore\n",
     "\n",
     "\n",
     "load_dotenv()\n",
@@ -95,8 +96,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if (\n",
+    "    PG_DB is None\n",
+    "    or PG_ADDR is None\n",
+    "    or PG_PORT is None\n",
+    "    or PG_USER is None\n",
+    "    or PG_PW is None\n",
+    "):\n",
+    "    raise ValueError(\"Environment variables not set\")\n",
+    "\n",
     "db = DataService(\n",
-    "    PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW\n",
+    "    PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW\n",
     ")  # Handles connections to the database\n",
     "conn = db.connect()  # Connect to the database\n",
     "\n",
@@ -146,7 +156,16 @@
     "days = jobArgs[0][4]\n",
     "outputFile = jobArgs[0][5]\n",
     "\n",
-    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "if (\n",
+    "    PG_DB is None\n",
+    "    or PG_ADDR is None\n",
+    "    or PG_PORT is None\n",
+    "    or PG_USER is None\n",
+    "    or PG_PW is None\n",
+    "):\n",
+    "    raise ValueError(\"Environment variables not set\")\n",
+    "\n",
+    "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "time.sleep(delay)\n",
     "\n",
     "print(f\"Starting to pull data for {year}/{month}\")\n",
@@ -307,8 +326,8 @@
     "df = gpd.GeoDataFrame(\n",
     "    df, crs=\"EPSG:4326\", geometry=gpd.points_from_xy(df.lon, df.lat)\n",
     ")  # Creates geometry from df using lon and lat as cords to create points (points being geometry)\n",
-    "df = df.to_crs(\n",
-    "    crs=\"EPSG:3347\"\n",
+    "df = df.to_crs(  # type: ignore\n",
+    "    crs=\"EPSG:3347\", inplace=True\n",
     ")  # Changes the points projection to match the agriculture regions of EPSG:3347\n",
     "df = gpd.sjoin(\n",
     "    df, agRegions, how=\"inner\", predicate=\"within\"\n",
@@ -361,7 +380,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -375,9 +394,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "fa12c0197ba262d3978e6f6673cf27e2255540123d2a48a6d08e62ef766e322e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
