Moved Images Files and Added car_uid

--- a/src/MoistureSatelliteTest/PullSampleMoistureData.ipynb
+++ b/src/MoistureSatelliteTest/PullSampleMoistureData.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "# netcdf_file_path = '/home/student/anghandk/CGC_Grain_Outcome_Predictions/src/MoistureSatelliteTest/Images/2004/ESACCI-SOILMOISTURE-L3S-SSMV-COMBINED_ADJUSTED-20040605000000-fv07.1.nc'\n",
-    "netcdf_file_path = './Images/2004/ESACCI-SOILMOISTURE-L3S-SSMV-COMBINED-20040605000000-fv07.1.nc'\n",
+    "netcdf_file_path = '/data/common/Images/2004/ESACCI-SOILMOISTURE-L3S-SSMV-COMBINED-20040605000000-fv07.1.nc'\n",
     "queryHandler = QueryHandler()\n",
     "\n",
     "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
@@ -96,7 +96,7 @@
    },
    "outputs": [],
    "source": [
-    "query = sq.text('select cr_num, geometry FROM public.census_ag_regions')\n",
+    "query = sq.text('select cr_num, car_uid, geometry FROM public.census_ag_regions')\n",
     "agRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs='EPSG:3347', geom_col='geometry')"
    ]
   },
