soils are now identified consistantly, updated sql in labeling process and soil tables

--- a/src/importSoil/labelSoil.ipynb
+++ b/src/importSoil/labelSoil.ipynb
@@ -15,7 +15,7 @@
     "import os, sys\n",
     "\n",
     "sys.path.append('../')\n",
-    "from DataService import DataService"
+    "from Shared.DataService import DataService"
    ]
   },
   {
@@ -62,9 +62,9 @@
    "outputs": [],
    "source": [
     "# load the polygon components\n",
-    "query = pd.read_sql_query('select \"SOIL_ID\", \"POLY_ID\" FROM public.soil_cmp', conn)\n",
-    "components = pd.DataFrame(query, columns=['SOIL_ID', 'POLY_ID'])\n",
-    "components = components.groupby('POLY_ID')['SOIL_ID'].apply(set)"
+    "query = pd.read_sql_query('select soil_id, poly_id FROM public.soil_components', conn)\n",
+    "components = pd.DataFrame(query, columns=['soil_id', 'poly_id'])\n",
+    "components = components.groupby('poly_id')['soil_id'].apply(set)"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "# load the boundaries for the polygons\n",
-    "query = sq.text('select \"POLY_ID\", geometry FROM public.soil_map')\n",
+    "query = sq.text('select poly_id, geometry FROM public.soil_geometry')\n",
     "soilRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs='EPSG:3347', geom_col='geometry')"
    ]
   },
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "# merge the components and the soil boundaries into one \n",
-    "regionsAndComponents = soilRegions.merge(components, on='POLY_ID')"
+    "regionsAndComponents = soilRegions.merge(components, on='poly_id')"
    ]
   },
   {
@@ -126,14 +126,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hash each set of soil to create a consistant color scheme for similar soil typings\n",
-    "colors = []\n",
+    "# reload each set as a list by ordering their contents\n",
+    "listOfSoilIDs = []\n",
     "\n",
-    "for index in range(len(soil.index)):\n",
-    "    value = soil.iloc[index]['SOIL_ID']\n",
-    "    colors.append(ColorHash(str(value)).hex)\n",
+    "for index, row in soil.iterrows():\n",
+    "    listOfSoilIDs.append(sorted(row['soil_id']))\n",
     "\n",
-    "soil['color'] = colors"
+    "soil['soil_id'] = listOfSoilIDs"
    ]
   },
   {
@@ -142,7 +141,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soil"
+    "# hash each set of soil to create a consistant color scheme for similar soil typings\n",
+    "colors = []\n",
+    "\n",
+    "for index in range(len(soil.index)):\n",
+    "    value = soil.iloc[index]['poly_id']\n",
+    "    colors.append(ColorHash(str(value)).hex)\n",
+    "\n",
+    "soil['color'] = colors"
    ]
   },
   {
@@ -155,7 +161,7 @@
     "fig, ax = plt.subplots(figsize=(13, 13))\n",
     "ax.set_ylim(miny, maxy)\n",
     "soil.plot(ax=ax, color=soil['color'])\n",
-    "agRegions.geometry.boundary.plot(color=None,edgecolor='k',linewidth = 2,ax=ax)\n",
+    "agRegions.geometry.boundary.plot(color=None, edgecolor='k', linewidth = 2, ax=ax)\n",
     "\n",
     "plt.show()"
    ]
@@ -170,7 +176,6 @@
     "labeledSoil = pd.DataFrame(soil.drop(columns=['geometry', 'color']))\n",
     "\n",
     "labeledSoil.rename(columns={labeledSoil.columns[0]: 'id'}, inplace=True)\n",
-    "labeledSoil.rename(columns={labeledSoil.columns[1]: 'poly_id'}, inplace=True)\n",
     "labeledSoil.rename(columns={labeledSoil.columns[2]: 'soil_ids'}, inplace=True)"
    ]
   },
@@ -180,12 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "listOfSoilIDs = []\n",
-    "\n",
-    "for index, row in labeledSoil.iterrows():\n",
-    "    listOfSoilIDs.append(list(row['soil_ids']))\n",
-    "\n",
-    "labeledSoil['soil_ids'] = listOfSoilIDs"
+    "labeledSoil"
    ]
   },
   {
